--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "debug": "^4.4.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mysql2": "^3.14.2",
     "winston": "^3.17.0"
   },
   "devDependencies": {
