install necessary packagesç

--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   "homepage": "https://github.com/tomason182/simplehostel_api#readme",
   "dependencies": {
     "@types/debug": "^4.1.12",
+    "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "debug": "^4.4.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "mysql2": "^3.14.2",
     "winston": "^3.17.0"
   },
