--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.2",
