--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.15.3",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.2",
+    "nodemailer": "^7.0.5",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -42,9 +46,13 @@
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.12",
     "@types/express": "^5.0.3",
+    "@types/handlebars": "^4.0.40",
+    "@types/html-to-text": "^9.0.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mjml": "^4.7.4",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.13",
+    "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
