--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "mjml": "^4.15.3",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
     "winston": "^3.17.0"
@@ -51,6 +52,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mjml": "^4.7.4",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.0.13",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
