--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
+    "hcaptcha": "^0.2.0",
     "helmet": "^8.1.0",
     "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
