--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
+    "sharp": "^0.34.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
